--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Registro PTI's">
-  <div id="formContainer" class="w-full max-w-lg p-8 mt-20 content-between">
+  <div id="formContainer" class="w-full max-w-lg p-8 mt-12 content-between">
     <!-- Progress bar -->
     <div class="flex justify-between mb-6">
       <div class="w-1/3 h-2 bg-gray-300 rounded-full step progress-step"></div>
@@ -13,8 +13,8 @@ import Layout from "../layouts/Layout.astro";
 
     <!-- Step 1: Personal Information -->
     <div class="step-content active">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-4">
-        Paso 1: Personal Information
+      <h2 class="text-xl font-semibold text-gray-700 mb-4">
+        Paso 1: Informacion
       </h2>
       <label for="fname" class="block text-gray-600">Deposito</label>
       <input
@@ -23,21 +23,29 @@ import Layout from "../layouts/Layout.astro";
         placeholder="Enter your first name"
         class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
+        <div class=" flex justify-between">
+            <div>
+                <label for="lname" class="block text-gray-600">Fecha del PTI</label>
+                <input
+                type="text"
+                id="lname"
+                placeholder="Enter your last name"
+                class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+                />
+            </div>
+            <div>
+                <label for="lname" class="block text-gray-600">Linea marítima</label>
+                <input
+                type="text"
+                id="lname"
+                placeholder="Enter your last name"
+                class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+                />
+            </div>
 
-      <label for="lname" class="block text-gray-600">Fecha del PTI</label>
-      <input
-        type="text"
-        id="lname"
-        placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
-      />
-      <label for="lname" class="block text-gray-600">Linea marítima</label>
-      <input
-        type="text"
-        id="lname"
-        placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
-      />
+        </div>
+      
+      
       <label for="lname" class="block text-gray-600"
         >Colocar etiqueta del PTI indicando fecha</label
       >
@@ -47,7 +55,9 @@ import Layout from "../layouts/Layout.astro";
         placeholder="Enter your last name"
         class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
-      <label for="lname" class="block text-gray-600"
+      <div class="flex justify-between">
+        <div>
+            <label for="lname" class="block text-gray-600"
         >Número del contenedor</label
       >
       <input
@@ -56,14 +66,20 @@ import Layout from "../layouts/Layout.astro";
         placeholder="Enter your last name"
         class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
-      <label for="lname" class="block text-gray-600">Tipo de maquinaria</label>
+        </div>
+        <div>
+            <label for="lname" class="block text-gray-600">Tipo de maquinaria</label>
       <input
         type="text"
         id="lname"
         placeholder="Enter your last name"
         class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
-      <div class="flex gap-2">
+        </div>
+      </div>
+      
+      
+      <div class="flex justify-between">
         <div>
           <label for="lname" class="block text-gray-600"
             >Nro. modelo de unidad</label
