--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Registro PTI's">
-  <div id="formContainer" class="w-full max-w-lg p-8 mt-12 content-between">
+  <div id="formContainer" class="w-full max-w-lg p-4 mt-12 content-between">
     <!-- Progress bar -->
     <div class="flex justify-between mb-6">
       <div class="w-1/3 h-2 bg-gray-300 rounded-full step progress-step"></div>
@@ -21,16 +21,16 @@ import Layout from "../layouts/Layout.astro";
         type="text"
         id="fname"
         placeholder="Enter your first name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+        class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
-        <div class=" flex justify-between">
+        <div class=" flex justify-between gap-2">
             <div>
                 <label for="lname" class="block text-gray-600">Fecha del PTI</label>
                 <input
                 type="text"
                 id="lname"
                 placeholder="Enter your last name"
-                class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+                class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
                 />
             </div>
             <div>
@@ -39,7 +39,7 @@ import Layout from "../layouts/Layout.astro";
                 type="text"
                 id="lname"
                 placeholder="Enter your last name"
-                class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+                class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
                 />
             </div>
 
@@ -53,18 +53,18 @@ import Layout from "../layouts/Layout.astro";
         type="text"
         id="lname"
         placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+        class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
-      <div class="flex justify-between">
+      <div class="flex justify-between gap-2">
         <div>
             <label for="lname" class="block text-gray-600"
-        >Número del contenedor</label
+        >Nro del contenedor</label
       >
       <input
         type="text"
         id="lname"
         placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+        class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
         </div>
         <div>
@@ -73,22 +73,22 @@ import Layout from "../layouts/Layout.astro";
         type="text"
         id="lname"
         placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+        class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
         </div>
       </div>
       
       
-      <div class="flex justify-between">
+      <div class="flex justify-between gap-2">
         <div>
           <label for="lname" class="block text-gray-600"
-            >Nro. modelo de unidad</label
+            >Nro modelo unidad</label
           >
           <input
             type="text"
             id="lname"
             placeholder="Enter your last name"
-            class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+            class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
           />
         </div>
         <div>
@@ -99,7 +99,7 @@ import Layout from "../layouts/Layout.astro";
             type="text"
             id="lname"
             placeholder="Enter your last name"
-            class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+            class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
           />
         </div>
       </div>
@@ -110,108 +110,108 @@ import Layout from "../layouts/Layout.astro";
         type="text"
         id="lname"
         placeholder="Enter your last name"
-        class="w-full px-3 py-2 mb-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
+        class="w-full px-3 py-2 mb-1 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
       />
     </div>
 
     <!-- Step 2: Contact Information -->
     <div class="step-content hidden">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-4">
+      <h2 class="text-2xl font-semibold text-gray-700 mb-1">
         Paso 2: Inspección visual de la unidad
       </h2>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Impactos de covers y paneles de maquinaria</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Pernos de montaje de la unidad</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Montaje del compresor, motor ventilador y ventilador</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Protector del compresor</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Paneles de accesor al motor evaporado</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Ventilador de aire fresco</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Panel de acceso a los calentadores</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Puerta caja de control & empaques</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Rejilla del ventilador del condensador</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Parte baja y puerta de caja</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
     </div>
 
     <!-- Step 3: Account Setup -->
     <div class="step-content hidden">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-4">
+      <h2 class="text-2xl font-semibold text-gray-700 mb-1">
         Paso 3: Inspección eléctrica
       </h2>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Cable de energía y enchufe</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
 
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600">Rompe circuito</label>
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Cables y conectores</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600">Contactores</label>
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
       <div class="flex justify-between gap-4">
         <label for="email" class="block text-gray-600"
           >Interruptores de seguridad</label
         >
-        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-4 border" />
+        <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
     </div>
 
@@ -271,7 +271,7 @@ import Layout from "../layouts/Layout.astro";
 
     if (currentStep >= steps.length) {
       formContainer.innerHTML =
-        "<h2 class='text-2xl font-semibold text-gray-700 mb-4 text-center'>Registro completado!</h2>";
+        "<h2 class='text-2xl font-semibold text-gray-700 mb-1 text-center'>Registro completado!</h2>";
       setTimeout(() => {
         window.location.href = "/registro";
       }, 2000);
