--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -6,9 +6,14 @@ import Layout from "../layouts/Layout.astro";
   <div id="formContainer" class="w-full max-w-lg p-4 mt-12 content-between">
     <!-- Progress bar -->
     <div class="flex justify-between mb-6">
-      <div class="w-1/3 h-2 bg-gray-300 rounded-full step progress-step"></div>
-      <div class="w-1/3 h-2 bg-gray-300 rounded-full step progress-step"></div>
-      <div class="w-1/3 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
+      <div class="w-1/6 h-2 bg-gray-300 rounded-full step progress-step"></div>
     </div>
 
     <!-- Step 1: Personal Information -->
@@ -116,7 +121,7 @@ import Layout from "../layouts/Layout.astro";
 
     <!-- Step 2: Contact Information -->
     <div class="step-content hidden">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-1">
+      <h2 class="text-lg font-semibold text-gray-700 mb-1">
         Paso 2: Inspección visual de la unidad
       </h2>
       <div class="flex justify-between gap-4">
@@ -183,7 +188,7 @@ import Layout from "../layouts/Layout.astro";
 
     <!-- Step 3: Account Setup -->
     <div class="step-content hidden">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-1">
+      <h2 class="text-lg font-semibold text-gray-700 mb-1">
         Paso 3: Inspección eléctrica
       </h2>
       <div class="flex justify-between gap-4">
@@ -214,6 +219,219 @@ import Layout from "../layouts/Layout.astro";
         <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
       </div>
     </div>
+
+    <!-- Step 4: Account Setup -->
+    <div class="step-content hidden">
+        <h2 class="text-lg font-semibold text-gray-700 mb-1">
+          Paso 4: Inspección del controlador
+        </h2>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cable de energía y enchufe</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+  
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Rompe circuito</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cables y conectores</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Contactores</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Interruptores de seguridad</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <h4 class=" font-semibold mt-2">Resistencia de aislamiento</h4>
+        <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Compresor</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+          <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Motor evaporador No. 1</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+          <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Motor evaporador No. 2</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+          <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Motor condensador</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+          <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Calentadores</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+    </div>
+
+
+      <!-- Step 5: Account Setup -->
+    <div class="step-content hidden">
+        <h2 class="text-lg font-semibold text-gray-700 mb-1">
+          Paso 5: Inspección del controlador
+        </h2>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cable de energía y enchufe</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+  
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Rompe circuito</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cables y conectores</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Contactores</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Interruptores de seguridad</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+      </div>
+
+      <!-- Step 6: Account Setup -->
+    <div class="step-content hidden">
+        <h2 class="text-lg font-semibold text-gray-700 mb-1">
+          Paso 6: Inspección fuga de gas refrigerante, aceite y corrosion
+        </h2>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cable de energía y enchufe</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+  
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Rompe circuito</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cables y conectores</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Contactores</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Interruptores de seguridad</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+      </div>
+
+        <!-- Step 7: Account Setup -->
+    <div class="step-content hidden">
+        <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Comprobar si los drenajes estan limpios</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+        <h2 class="text-lg font-semibold text-gray-700 mb-1">
+          Paso 7: Consumo de energia eléctrica
+        </h2>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cable de energía y enchufe</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+  
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Rompe circuito</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Cables y conectores</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Contactores</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Interruptores de seguridad</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+      </div>
+
+       <!-- Step 8: Account Setup -->
+    <div class="step-content hidden">
+        <div class="flex justify-between gap-4">
+            <label for="email" class="block text-gray-600"
+              >Inspeccionar rotación  del ventilador evaorador</label
+            >
+            <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+          </div>
+        <h2 class="text-lg font-semibold text-gray-700 mb-1">
+          Paso 8: Unidad operando
+        </h2>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Ejecutar auto PTI2</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+  
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Trabajar la unidad a 0°C</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Trabajar la unidad en modo defrost</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600">Trabajar la unidad a 20°C</label>
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+        <div class="flex justify-between gap-4">
+          <label for="email" class="block text-gray-600"
+            >Máxima temperatura alcanzada</label
+          >
+          <input type="checkbox" class="h-6 w-6 px-3 py-2 mb-1 border" />
+        </div>
+      </div>
 
     <!-- Navigation Buttons -->
     <div class="absolute bottom-0 left-0 right-0 m-8">
